# contextualized-forecasting-evals

./: .gitignore  AGENTS.md  README.md  mypy.ini  pyproject.toml
cfevals/: __init__.py  data.py  eval.py  prompts.py  record.py  registry.py
cfevals/benchmarks/: __init__.py  base.py  context_is_key.py  fred.py
cfevals/cli/: cfeval.py  cfevalset.py
cfevals/elsuite/: context_is_key.py  fred_unrate.py
cfevals/engine/: __init__.py  backtest.py  runner.py  scenario.py  validation.py
cfevals/forecaster_fns/: base.py  chronos.py  llm.py  neuralforecast.py  statsforecast.py  timesfm.py
cfevals/metrics/: point.py  probabilistic.py
cfevals/models/: __init__.py  base.py  chronos.py  llm.py  naive.py
cfevals/registry/benchmark_sets/: starter.v1.yaml
cfevals/registry/benchmarks/: cik.v1.yaml  fred_unrate.v1.yaml
cfevals/registry/datasets/: context_is_key.yaml  fred_unrate.yaml
cfevals/registry/eval_sets/: starter_set.v1.yaml
cfevals/registry/evals/: context_is_key.test.v1.yaml  fred_unrate.test.v1.yaml  fred_unrate_with_epu.test.v1.yaml
cfevals/registry/forecasters/: llm.yaml  local_classical.yaml  local_neural.yaml  sets.yaml  tsfm.yaml
cfevals/registry/models/: chronos_t5_small.v1.yaml  naive_last.v1.yaml  openai_gpt4o_mini.v1.yaml
tests/: test_cik_loader_smoke.py  test_forecast_validation.py  test_fred_loader_smoke.py  test_llm_json_parser.py  test_no_leak_lags.py  test_rcrps_smoke.py  test_registry_loads.py  test_seed_determinism.py
