[project]
name = "cfevals"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "chronos-forecasting",
    "datasets",
    "matplotlib",
    "neuralforecast",
    "numpy",
    "openai",
    "pytest",
    "pyyaml",
    "statsforecast",
    "timesfm",
]

[project.urls]
repository = "https://github.com/openai/evals"

[project.optional-dependencies]
formatters = ["black", "isort", "autoflake", "ruff"]

torch = ["torch"]

[project.scripts]
cfeval = "cfevals.cli.cfeval:main"
cfevalset = "cfevals.cli.cfevalset:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cfevals", "cfevals.*"]

[tool.setuptools.package-data]
cfevals = ["registry/**/*.yaml"]
