[project]
name = "cfevals"
version = "0.1.0"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "datasets",
    "numpy",
    "pandas",
    "pandas-datareader",
    "pyyaml",
]

[project.urls]
repository = "https://github.com/openai/evals"

[project.optional-dependencies]
dev = ["pytest"]
formatters = ["black", "isort", "autoflake", "ruff"]
chronos = ["chronos-forecasting", "torch"]
openai = ["openai"]

[project.scripts]
cfeval = "cfevals.cli.cfeval:main"
cfevalset = "cfevals.cli.cfevalset:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cfevals", "cfevals.*"]

[tool.setuptools.package-data]
cfevals = ["registry/**/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true
